# zuberabot

./: README_zuberabot.md  pyproject.toml  start_api.bat  start_api.ps1  start_bot.ps1  start_gateway.bat
bridge/: package.json
bridge/src/: index.ts  server.ts  whatsapp.ts
zuberabot/agent/: context.py  loop.py
zuberabot/agent/tools/: expense.py  ticket.py
zuberabot/api/: server.py
zuberabot/channels/: whatsapp.py
zuberabot/database/: models.py  postgres.py
